# ollama-rag-platforms

./: README.md
duckdb-analytics-mcp/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  docker-compose.yml  pyproject.toml
duckdb-analytics-mcp/.github/workflows/: ci.yml
duckdb-analytics-mcp/data/: sales_orders.csv  support_tickets.jsonl
duckdb-analytics-mcp/evaluations/: duckdb_analytics_eval.xml
duckdb-analytics-mcp/notebooks/: 01_mcp_server_tutorial.ipynb
duckdb-analytics-mcp/scripts/: execute_notebooks.py  smoke_test.py
duckdb-analytics-mcp/src/duckdb_analytics_mcp/: __init__.py  catalog.py  cli.py  config.py  formatter.py  logging_utils.py  models.py  security.py  server.py  service.py
duckdb-analytics-mcp/tests/: test_catalog.py  test_e2e_mcp.py  test_security.py  test_server.py  test_service.py
local-slm-ollama-benchmark/: README.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
local-slm-ollama-benchmark/artifacts/granite_3b_run_20260612/: benchmark_report.md  model_summary.csv  prompt_runs.csv  raw_results.json
local-slm-ollama-benchmark/artifacts/notebook_run_20260612_082848/: benchmark_report.md  model_summary.csv  prompt_runs.csv  raw_results.json
local-slm-ollama-benchmark/artifacts/real_run_20260612_v2/: benchmark_report.md  model_summary.csv  prompt_runs.csv  raw_results.json
local-slm-ollama-benchmark/configs/: benchmark.toml
local-slm-ollama-benchmark/notebooks/: local_slm_ollama_tutorial.executed.ipynb  local_slm_ollama_tutorial.ipynb
local-slm-ollama-benchmark/src/local_slm_ollama_benchmark/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  metrics.py  ollama_client.py  quality.py
local-slm-ollama-benchmark/tests/: test_metrics.py  test_quality.py
production-rag-ask-my-docs/: .coverage  .gitignore  README.md  ZERO_TO_HERO_LEARNING_HANDBOOK.md  ZERO_TO_HERO_PDF_EXPORT.md  ZERO_TO_HERO_STUDY_HANDBOOK.md  pyproject.toml
production-rag-ask-my-docs-learning/: .gitignore  README.md  pyproject.toml
production-rag-ask-my-docs-learning/.github/workflows/: ci.yml
production-rag-ask-my-docs-learning/artifacts/run_logs/: ask.txt  build_index.txt  cli_help.txt  evaluate.txt  inspect_retrieval.txt  notebook_execute.txt  pytest.txt  uv_sync.txt
production-rag-ask-my-docs-learning/configs/: eval_thresholds.yaml
production-rag-ask-my-docs-learning/data/docs/: access_control.md  data_retention.md
production-rag-ask-my-docs-learning/data/eval/: qa.yaml
production-rag-ask-my-docs-learning/notebooks/: 01_rag_walkthrough.executed.ipynb  01_rag_walkthrough.ipynb
production-rag-ask-my-docs-learning/src/ask_my_docs/: __init__.py  answering.py  api.py  cli.py  evaluation.py  indexing.py  ingestion.py  logging_config.py  pipeline.py  settings.py  text.py  types.py
production-rag-ask-my-docs-learning/src/ask_my_docs/retrieval/: hybrid.py
production-rag-ask-my-docs-learning/tests/: test_answering.py  test_fusion.py  test_text.py
production-rag-ask-my-docs/.github/workflows/: ci.yml
production-rag-ask-my-docs/artifacts/: baseline_metrics.json
production-rag-ask-my-docs/artifacts/notebook_tutorial/: baseline_metrics.json  current_metrics.json  sample_answer.json
production-rag-ask-my-docs/artifacts/notebook_tutorial/index/: chunks.jsonl  embeddings.npy  manifest.json  semantic.index
production-rag-ask-my-docs/artifacts/notebook_tutorial/observability/: metrics.duckdb  traces.jsonl
production-rag-ask-my-docs/configs/: regression_thresholds.yaml
production-rag-ask-my-docs/data/docs/: billing_disputes.md  incident_sla.md  onboarding_handover.md
production-rag-ask-my-docs/data/eval/: eval_set.jsonl
production-rag-ask-my-docs/notebooks/: tutorial_observability_ollama.ipynb
production-rag-ask-my-docs/src/ask_my_docs/: __init__.py  cli.py  models.py  pipeline.py  settings.py  utils.py
production-rag-ask-my-docs/src/ask_my_docs/evaluation/: __init__.py  gating.py  metrics.py  runner.py
production-rag-ask-my-docs/src/ask_my_docs/llm/: __init__.py  ollama.py
production-rag-ask-my-docs/src/ask_my_docs/observability/: __init__.py  cost.py  metrics_store.py  tracing.py
production-rag-ask-my-docs/src/ask_my_docs/retrieval/: __init__.py  hybrid.py
production-rag-ask-my-docs/tests/: test_cli.py  test_costing.py  test_gating.py  test_metrics_store.py  test_ollama.py  test_pipeline.py  test_retrieval.py
(+125 files in other folders)
