[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckdb-analytics-mcp"
version = "0.1.0"
description = "Production-grade MCP server for secure read-only DuckDB analytics over local datasets"
readme = "README.md"
requires-python = ">=3.12.10,<3.13"
authors = [{ name = "Ahmad Mujtaba" }]
license = "MIT"
dependencies = [
    "duckdb>=1.5.3",
    "loguru>=0.7.3",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "typer>=0.26.7",
]

[project.scripts]
duckdb-analytics-mcp = "duckdb_analytics_mcp.cli:app"

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "mypy>=2.1.0",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "types-tabulate>=0.10.0.20260508",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
pretty = true
mypy_path = "src"
