[project]
name = "ask-my-docs-rag-learning"
version = "0.1.0"
description = "Learning-first production RAG with hybrid retrieval, reranking, citations, and CI-gated eval"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "faiss-cpu>=1.9.0",
  "fastapi>=0.115.0",
  "loguru>=0.7.2",
  "numpy>=1.26.0",
  "orjson>=3.10.0",
  "polars>=1.9.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pyyaml>=6.0.2",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.2.0",
  "typer>=0.13.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "types-PyYAML>=6.0.12.20240917",
]

[project.scripts]
ask-my-docs = "ask_my_docs.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_my_docs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
